--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,15 @@
 version: 0.2
 
+env:
+  parameter-store: 
+       AWS_DEFAULT_REGION: /PYTHON-APP/REGION/AWS_DEFAULT_REGION
+       AWS_ACCOUNT_ID: /PYTHON-APP/ACCOUNT-ID/AWS_ACCOUNT_ID
+       IMAGE_REPO_NAME: /PYTHON-APP/REPO-NAME/IMAGE_REPO_NAME
+       IMAGE_TAG: /PYTHON-APP/IMAGE-VERSION-IMAGE_TAG
 phases:
+  install:
+    runtime-versions:
+      pyhton: 3.11
   pre_build:
     commands:
       - echo "Installing dependencies..."
